landscape and option of amount of questions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="button_3">Preferanser</string>
 
     <string name="omspill">Om Spillet:</string>
-    <string name="omspillinfo">Liker du matte og vil teste ut dine ferdigheter! På QuickMaths så handler spillet om å teste ut deine matte skills for å øve på å addere. Matte kan være vanskelig for noen, men det burde ikke være det, dette klarer du! Masse lykke til :)</string>
+    <string name="omspillinfo">Liker du matte og vil teste ut dine ferdigheter! På QuickMaths så handler spillet om å teste ut dine matte skills for å øve på å addere. Matte kan være vanskelig for noen, men det burde ikke være det, dette klarer du! Masse lykke til :)</string>
 
     <string name="pref">Preferanser:</string>
     <string name="bytt">Bytt språk:</string>
