worked on the game page where it gets increased and stops when it reaches 5, 10, 15 when compared to the sharedPreferences variable

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,5 +17,8 @@
     <string name="regn5">5</string>
     <string name="regn10">10</string>
     <string name="regn15">15</string>
+    <string name="safeguard">Sind Sie sicher, dass Sie zurückkehren möchten?</string>
+    <string name="spillsvarHint">Antwort:</string>
+    <string name="spørsmålTxt">Fragen</string>
 
 </resources>
