--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="regn10">10</string>
     <string name="regn15">15</string>
 
+
+
     <string name="safeguard">Er du sikker på at du vil gå tilbake?</string>
     <string name="spillsvarHint">Svar:</string>
     <string name="spørsmålTxt">Spørsmål</string>
@@ -32,6 +34,7 @@
     <string name="tilbakemeldingdel2">" epler og Erik har "</string>
     <string name="tilbakemeldingdel3">" epler, hvor mye har de til sammen da?"</string>
     <string name="riktigSvar">Riktig, bra jobbet ;)</string>
+    <string name="dataLagret">DATA LAGRET</string>
 
 
 </resources>
